Update 05. taint and toleration.md

--- a/DO280/05. taint and toleration.md
+++ b/DO280/05. taint and toleration.md
@@ -1,4 +1,4 @@
-# Question 1. An application is running on the red project. There is one pod running and your task is it must generate the output.
+# Question 1. An application is running on the `red` project. There is one pod running and your task is it must generate the output.
 
 ```
 oc project red
@@ -61,7 +61,7 @@ oc describe service/todo-svc
 
 
 
-# Qustion 2. An application is running on the blue project. There is one pod running and your task is it must generate the output.
+# Qustion 2. An application is running on the `blue` project. There is one pod running and your task is it must generate the output.
 
 ### Solution:
 
