--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -33,3 +33,9 @@ oc get pods
 ```
 oc get route
 ```
+
+
+# Question : Create Service Account and assign root  privileged
+- oc create serviceaccount  user_root
+- oc adm policy add-scc-to-user  anyuid  -z user_root
+---
