--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -18,6 +18,7 @@ oc get all
 ```
 oc logs POD_NAME
 ```
+### Security Context Constraints (SCCs)
 ```
 oc adm policy add-scc-to-user anyuid -z ex280-sa
 ```
