--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -1,6 +1,7 @@
 
 ### Question: Create a Service Account called `ex280-sa` in a `alpha` project. This project is already created for you.
-- There is an application already running. 
+- There is an application already running.
+- ServiceAccoun should be associated with anyuid SCC
 - Your task is to open the web portal successfully.
 ---
 
