--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -10,6 +10,23 @@
 oc project alpha
 ```
 
+
+### Create a Service Account called ex280-sa in a alpha project.
+
+```
+oc create serviceaccount --help | less
+```
+```
+oc create serviceaccount ex280-sa -n alpha
+```
+
+### Security Context Constraints (SCCs)
+```
+oc adm policy --help | less
+```
+```
+oc adm policy add-scc-to-user anyuid -z ex280-sa
+```
 ### Check the application.
 ```
 oc get all
@@ -19,13 +36,7 @@ oc get all
 ```
 oc logs POD_NAME
 ```
-### Security Context Constraints (SCCs)
-```
-oc adm policy add-scc-to-user anyuid -z ex280-sa
-```
-```
-oc get all
-```
+
 ```
 oc set serviceaccount deployment/deployment_name ex280-sa
 ```
