--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -2,7 +2,6 @@
 ### Question: Create a Service Account called `ex280-sa` in a `alpha` project. This project is already created for you.
 - There is an application already running.
 - ServiceAccoun should be associated with anyuid SCC
-- Your task is to open the web portal successfully.
 ---
 
 ## Solution:
@@ -27,6 +26,26 @@ oc adm policy --help | less
 ```
 oc adm policy add-scc-to-user anyuid -z ex280-sa
 ```
+
+
+# Question : Create Service Account and assign root  privileged
+- oc create serviceaccount  user_root
+- oc adm policy add-scc-to-user  anyuid  -z user_root
+---
+
+
+# Deploy application in the project `alpha`:
+- There is one pod already running
+- Modify the application as is should run with any user as provided by application
+- Application should produce output
+
+
+### Solution
+### Go to the project first.
+```
+oc project alpha
+```
+
 ### Check the application.
 ```
 oc get all
@@ -35,8 +54,14 @@ oc get all
 ### Check the Pod status.
 ```
 oc logs POD_NAME
+oc get events
+```
+### Due to the permission issue, our application is not running. It means you need to set the serviceaccount so that container can run with any user.
+```
+oc set serviceaccount --help | less
 ```
 
+### Please bear in mind that, you need to check if deployment or dc is runing.
 ```
 oc set serviceaccount deployment/deployment_name ex280-sa
 ```
@@ -46,9 +71,3 @@ oc get pods
 ```
 oc get route
 ```
-
-
-# Question : Create Service Account and assign root  privileged
-- oc create serviceaccount  user_root
-- oc adm policy add-scc-to-user  anyuid  -z user_root
----
