--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -29,8 +29,12 @@ oc adm policy add-scc-to-user anyuid -z ex280-sa
 
 
 # Question : Create Service Account and assign root  privileged
-- oc create serviceaccount  user_root
-- oc adm policy add-scc-to-user  anyuid  -z user_root
+```
+oc create serviceaccount  user_root
+```
+```
+oc adm policy add-scc-to-user  anyuid  -z user_root
+```
 ---
 
 
