--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -1,5 +1,6 @@
 
-### Question: Create a Service Account called `ex280-sa` in a `alpha` project. This project is already created for you.
+# Question 1: 
+## Create a Service Account called `ex280-sa` in a `alpha` project. This project is already created for you.
 - There is an application already running.
 - ServiceAccoun should be associated with anyuid SCC
 ---
@@ -28,7 +29,8 @@ oc adm policy add-scc-to-user anyuid -z ex280-sa
 ```
 
 
-# Question : Create Service Account and assign root  privileged
+# Question 2: 
+## Create Service Account and assign root  privileged
 ```
 oc create serviceaccount  user_root
 ```
@@ -38,11 +40,12 @@ oc adm policy add-scc-to-user  anyuid  -z user_root
 ---
 
 
-# Deploy application in the project `alpha`:
+# Question 3:
+## Deploy application in the project `alpha`:
 - There is one pod already running
 - Modify the application as is should run with any user as provided by application
 - Application should produce output
-
+---
 
 ### Solution
 ### Go to the project first.
