Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -1,5 +1,5 @@
 ## Q3.  Create project and assign Role For user
-- `front-end`, `back-end`, and `app-db`
+- Create 3 projects, `front-end`, `back-end`, and `app-db`
 - The `leader` user will be admin of these above projects. 
 - The `qa-engineer` user will be having view access to `app-db`  project. 
 - The `harry` user will create 3 groups, `leaders`, `developers` and `qa`. 
