--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -1,9 +1,9 @@
 
-# Create a cronjob test-cron
+# Create a cronjob `test-cron`
 - 04:05 time
 - Every 2 day and every month
-- Use image registry.io/nginx
-- The service account and service account name is project1-sa
+- Use image `registry.io/nginx`
+- The service account and service account name is `project1-sa
 - Successful job history limit 14
 - Project name should be cron-test
 - Create a cronjob using webconsole or take yaml from documentation
