--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -1,12 +1,12 @@
-
 # Create a cronjob `test-cron`
-- 04:05 time
+- `04:05` time
 - Every 2 day and every month
 - Use image `registry.io/nginx`
-- The service account and service account name is `project1-sa
-- Successful job history limit 14
-- Project name should be cron-test
+- The service account and service account name is `ex280-sa`
+- Successful job history limit `14`
+- Project name should be `tiger`
 - Create a cronjob using webconsole or take yaml from documentation
+---
 
 
 <img width="599" alt="image" src="https://github.com/user-attachments/assets/7eb3c9db-7066-4c4b-a2e7-d3d195ab287a" />
