--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -10,3 +10,25 @@
 
 
 <img width="599" alt="image" src="https://github.com/user-attachments/assets/7eb3c9db-7066-4c4b-a2e7-d3d195ab287a" />
+
+
+### Run this command in your terminal to create the CronJob in the tiger project.
+
+```
+oc create cronjob test-cron \
+  --image=registry.io/nginx \
+  --schedule="5 4 */2 * *" \
+  --service-account=ex280-sa \
+  --successful-jobs-history-limit=14 \
+  -n tiger
+```
+
+### Explanation of the Command:
+
+- **oc create cronjob**: Command to create a CronJob.
+- **test-cron**: Name of the CronJob.
+- **--image=registry.io/nginx**: Specifies the container image to use.
+- **--schedule="5 4 */2 * *"**: Sets the schedule for the CronJob (04:05 every 2 days).
+- **--service-account=ex280-sa**: Associates the CronJob with the specified service account.
+- **--successful-jobs-history-limit=14**: Limits the number of successful job history.
+- **-n tiger**: Specifies the namespace (project) where the CronJob will be created.
