Update 01. Configure Authentication.md

--- a/DO280/01. Configure Authentication.md
+++ b/DO280/01. Configure Authentication.md
@@ -1,8 +1,8 @@
 ### Q1.  Configure Authentication using below information
-- Provider name is ex280-provider
-- Secret name is  super-secret
+- Provider name is `ex280-provider`
+- Secret name is  `super-secret`
 - Configure  user and apply password for them. Or Ensure that four users account exist.
-- admin, leader , developer, qa-engineer and all should have review password.
+- `admin`, `leader` , `developer`, `qa-engineer` and all should have review password.
 ---
 ### Solution:
 ```
