--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -1,6 +1,6 @@
 
-### Question 2. 
-- Cluster administrator for harry 
+# Question 2. Manage Cluster Project and Permissions:
+- Cluster administrator for `harry` 
 - `leader` user should be able create project but not administrator tasks or no other user should able to create project.
 - `developer` and qa-engineer should not able to modify the cluster. 
 - `kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
