Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -1,10 +1,24 @@
 
 # Question 2. Manage Cluster Project and Permissions:
+- Create 3 projects, `front-end`, `back-end`, and `app-db`
 - Cluster administrator for `harry` 
 - `leader` user should be able create project but not administrator tasks or no other user should able to create project.
 - `developer` and qa-engineer should not able to modify the cluster. 
 - `kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
 ---
+## Solution:
+## Create a 3 groups by `harry' user.
+```
+oc  new-project  front-end
+```
+
+```
+oc  new-project  back-end
+```
+
+```
+oc  new-project  app-db
+```
 ### Cluster administrator for harry
 ```
 oc adm policy add-cluster-role-to-user cluster-admin harry
