Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -1,21 +1,20 @@
 
 # Question 2. Manage Cluster Project and Permissions:
 - Create 3 projects, `front-end`, `back-end`, and `app-db`
-- Cluster administrator for `harry` 
+- `harry` user should have cluster administrator rights.
 - `leader` user should be able create project but not administrator tasks or no other user should able to create project.
-- `developer` and qa-engineer should not able to modify the cluster. 
+- `developer` user can only `view` the resources of `front-end` and `back-end` projects.
+- `qa-engineer` user should have `admin` access to  `front-end` project.
 - `kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
 ---
 ## Solution:
-## Create a 3 groups by `harry' user.
+### Create a 3 groups by `harry' user.
 ```
 oc  new-project  front-end
 ```
-
 ```
 oc  new-project  back-end
 ```
-
 ```
 oc  new-project  app-db
 ```
@@ -36,12 +35,16 @@ oc adm policy remove-cluster-role-from-group  self-provisioner system:authentica
 ```
 oc adm policy add-cluster-role-to-user self-provisioner leader
 ```
-### `developer` and qa-engineer should not able to modify the cluster.
+### `developer` user can only `view` the resources of `front-end` and `back-end` projects.
 ```
-oc adm policy add-cluster-role-to-user view developer
-oc adm policy add-cluster-role-to-user view qa-engineer
+oc adm policy add-cluster-role-to-user view developer -n front-end
+oc adm policy add-cluster-role-to-user view qa-engineer -n back-end
 ```
-### `Kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
+### `qa-engineer` user should have `admin` access to  `front-end` project.
+```
+oc policy add-role-to-user admin qa-engineer -n front-end
+```
+
 
 ##### As of now, we haven't tried to login into the cluster, so these user are not created at cluster level. 
 ```
@@ -67,9 +70,9 @@ oc login -u qa-engineer -p review
 ```
 oc new-project  test
 ```
-
+### `kubeadmin` user should not exist (remove kubeadmin user)  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
 ### Now, its time to remove the kubeadmin but before that login with harry user. 
-
+## Firtly, we will login from our newly admin user `harry`
 ```
 oc login -u harry -p review
 ```
