Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -2,19 +2,17 @@
 
 
 - The `harry` user will create 3 groups, `leaders`, `developers` and `qa`. 
-- Assign the `leader` user to the `leaders` group. 
-- Assign the `developer` user to the `developers` group. 
+- Add `leader` user in `leaders` group. 
+- Add `developer` user in `developers` group. 
 - Assign the `qa-engineer` user to the `qa` group.
 - `leader` group members are able to edit the group `back-end` and `app-db`
 - `qa` group members are able to view `front-end` group. 
 ---
 ## Solution
-### Login with `harry` user.
+### Login with `harry` user. Please bear in my mind that now, admin user is `harry`.
 ```
 oc login -u harry -p review
 ```
-
-
 
 ### The `harry` user will create 3 groups, `leaders`, `developers` and `qa`. 
 ```
