Update 01. Configure Authentication.md

--- a/DO280/01. Configure Authentication.md
+++ b/DO280/01. Configure Authentication.md
@@ -1,7 +1,7 @@
 ### Q1.  Manage Identity Providers:
 - configure the Oauth to use HTPasswd as the identity provider.
 - Identity Provider name is `ex280-provider`.
-- Create 4 users, `harry`, `leader` , `developer`, `qa-engineer` and all should have review password.
+- Create 4 users, `harry`, `leader` , `raja`, `qa-engineer` and all should have review password.
 - Configure  user and apply password for them. Or Ensure that four users account exist.
 - Secret name is  `super-secret`
 ---
@@ -20,7 +20,7 @@ cat /home/student/htpasswd
 ```
 ```
 htpasswd -b /home/student/htpasswd leader review
-htpasswd -b /home/student/htpasswd developer review
+htpasswd -b /home/student/htpasswd raja review
 htpasswd -b /home/student/htpasswd  qa-engineer reivew 
 ```
 ```
