Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -25,13 +25,18 @@ oc adm group new developers
 oc adm group new qa
 ```
 
-
+## Post checks.
+```
+oc get groups
+```
 ### Assign the `qa-engineer` user to the `qa` group.
+### `oc adm groups add-users group_name username`
 ```
 oc adm groups add-users qa  qa-engineer
 ```
 
 ### Assign the `leader` user to the `leaders` group. 
+
 ```
 oc adm groups add-users leaders  leader
 ```
