Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -5,7 +5,7 @@
 - Add `leader` user in `leaders` group. 
 - Add `developer` user in `developers` group. 
 - Assign the `qa-engineer` user to the `qa` group.
-- `leader` group members are able to edit the group `back-end` and `app-db`
+- `leaders` group members are able to edit the group `back-end` and `app-db`
 - `qa` group members are able to view `front-end` group. 
 ---
 ## Solution
