Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -5,8 +5,8 @@
 - Add `leader` user in `leaders` group. 
 - Add `developer` user in `developers` group. 
 - Assign the `qa-engineer` user to the `qa` group.
-- `leaders` group members are able to edit the group `back-end` and `app-db`
-- `qa` group members are able to view `front-end` group. 
+- Give `edit` permission to `leaders` group members to `back-end` and `app-db` projects.
+- Give `view` permission to `qa` group members to `front-end` project.
 ---
 ## Solution
 ### Login with `harry` user. Please bear in my mind that now, admin user is `harry`.
