--- a/DO280/06. ServiceAccount.md
+++ b/DO280/06. ServiceAccount.md
@@ -1,4 +1,10 @@
-
+## Create the lab
+```
+lab start appsec-scc
+oc new-project alpha
+oc login -u admin -p redhatocp https://api.ocp4.example.com:6443
+oc new-app --name gitlab --image registry.ocp4.example.com:8443/redhattraining/gitlab-ce:8.4.3-ce.0
+```
 # Question 1: 
 ## Create a Service Account called `ex280-sa` in a `alpha` project. This project is already created for you.
 - There is an application already running.
