--- a/DO280/11. AutoScale.md
+++ b/DO280/11. AutoScale.md
@@ -1,3 +1,9 @@
+### Create the lab
+```
+oc login -u harry -p review
+oc new-project scalling
+oc new-app --name hello --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
+```
 # Configure `Resource Request` & `limits` into deployment and Apply `AutoScale Rule` in the project `scalling`.
 - Minimum replicas = 2 , Maximum replicas = 5 and cpu percentage = 50%
 - Default request for containers memory should 100Mi and CPU 50m
