--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -1,4 +1,4 @@
-# Create a cronjob `test-cron`
+# Create a cronjob `test-cron` in the `tiger' project
 - `04:05` time
 - Every 2 day and every month
 - Use image `registry.io/nginx`
