--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -17,9 +17,7 @@
 ```
 oc create cronjob test-cron \
   --image=registry.io/nginx \
-  --schedule="5 4 */2 * *" \
-  --service-account=ex280-sa \
-  --successful-jobs-history-limit=14 \
+  --schedule="05 4 */2 * *" \
   -n tiger
 ```
 
@@ -32,3 +30,6 @@ oc create cronjob test-cron \
 - **--service-account=ex280-sa**: Associates the CronJob with the specified service account.
 - **--successful-jobs-history-limit=14**: Limits the number of successful job history.
 - **-n tiger**: Specifies the namespace (project) where the CronJob will be created.
+
+
+![image](https://github.com/user-attachments/assets/3710c958-69a6-4e7d-bdb8-3dfb3130f8e3)
