--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -56,6 +56,8 @@ fi
 
 ### Solution:
 ### There are 2 projects running, `network-policy` & `different-namespace`
+### We will create the network policy at the end, first let's add the desired labels.
+### Policy uses labels to specify namespace with `network: different-namespace`
 ### If we create a netpol (networkpolicy) in the "network-policy" namespace then we have to add the label "network: different-namespace" on namespace `different-namespace`
 
 ```
@@ -64,7 +66,7 @@ oc project different-namespace
 ```
 oc label namespace different-namespace network=different-namespace
 ```
-
+### Uses label env=production
 ### Modify the deployment with label "env: production"
 
 ![image](https://github.com/user-attachments/assets/862876ac-be83-4bc9-af1f-b537e8845152)
