--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -68,7 +68,12 @@ oc label namespace different-namespace network=different-namespace
 ```
 ### Uses label env=production
 ### Modify the deployment with label "env: production"
-
+```
+ oc new-project network-policy
+```
+```
+oc edit deployment hello
+```
 ![image](https://github.com/user-attachments/assets/862876ac-be83-4bc9-af1f-b537e8845152)
 
 ### Create a network policy to allow traffic to the hello pod in the network-policy project from the sample-app pod in the different-namespace project via TCP on port 8080. 
