--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -69,7 +69,7 @@ oc label namespace different-namespace network=different-namespace
 ### Uses label env=production
 ### Modify the deployment with label "env: production"
 ```
- oc new-project network-policy
+ oc project network-policy
 ```
 ```
 oc edit deployment hello
@@ -111,7 +111,7 @@ oc whoami --show-console
 
 ### Post checks
 ```
- oc new-project network-policy
+ oc project network-policy
 ```
 ```
 oc get pods -o wide
