--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -1,7 +1,9 @@
 ## Pre-pare lab.
 ```
+oc new-project network-policy
 oc new-app --name hello  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
-oc expose service/hello 
+oc expose service/hello
+oc new-project different-namespace
 oc new-app --name sample-app  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
 ```
 ```
@@ -78,8 +80,10 @@ oc edit deployment hello
 
 ### Create a network policy to allow traffic to the hello pod in the network-policy project from the sample-app pod in the different-namespace project via TCP on port 8080. 
 ### It would be easy to create the networkpolicy from web portal.
-### From CLI
-
+### From CLI, first go to `network-pollicy` project, so that `netpol` will be created on "network-policy" namespace.
+```
+oc project network-policy
+```
 ```
 cat <<EOF | kubectl apply -f -
 kind: NetworkPolicy
