--- a/DO280/15. Volume.md
+++ b/DO280/15. Volume.md
@@ -1,4 +1,5 @@
-# **Create a pv**
+# Create PV, PVC and then deployment.
+- **Create a pv**
 	- Name is tiger-pv
 	- Size: `1Gi`
 	- Policy: `retain`
