Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -1,4 +1,4 @@
-          ### Protect External Traffic with TLS
+# Protect External Traffic with TLS
 ### Create secure Route  with below information
 - Create a secure route in quart project.
 - Expose application https://something.example.com
