--- a/DO280/13. cronjob.md
+++ b/DO280/13. cronjob.md
@@ -2,7 +2,7 @@
 - `04:05` time
 - Every 2 day and every month
 - Use image `registry.io/nginx`
-- The service account and service account name is `ex280-sa`
+- Use service account and service account name is `ex280-sa`
 - Successful job history limit `14`
 - Project name should be `tiger`
 - Create a cronjob using webconsole or take yaml from documentation
@@ -12,15 +12,21 @@
 <img width="599" alt="image" src="https://github.com/user-attachments/assets/7eb3c9db-7066-4c4b-a2e7-d3d195ab287a" />
 
 
-### Run this command in your terminal to create the CronJob in the tiger project.
+
+### Let's use the help command.
+```
+oc create cronjob -h
+```
+### cat /etc/crontab, fron this file, we get to know the sytax of "04 05 */2 * *"
+
+![image](https://github.com/user-attachments/assets/3710c958-69a6-4e7d-bdb8-3dfb3130f8e3)
+
+
+### Use `-- dry-run=server` instead of `-- dry-run=client`. You will get the syntax of "Successful job history limit"
 
 ```
-oc create cronjob test-cron \
-  --image=registry.io/nginx \
-  --schedule="05 4 */2 * *" \
-  -n tiger
+oc create cronjob test-cron -- image=registry. io/nginx -- schedule="04 05 */2 * *" -- dry-run=server -o yaml > /tmp/cronjob.yaml
 ```
-
 ### Explanation of the Command:
 
 - **oc create cronjob**: Command to create a CronJob.
@@ -32,4 +38,42 @@ oc create cronjob test-cron \
 - **-n tiger**: Specifies the namespace (project) where the CronJob will be created.
 
 
-![image](https://github.com/user-attachments/assets/3710c958-69a6-4e7d-bdb8-3dfb3130f8e3)
+### Let's open the file and update the value "Successful job history limit = 14"
+```
+vi /tmp/cronjob.yaml
+```
+### Its time to create the cronjob from our yaml file.
+```
+oc apply -f /tmp/cronjob.yaml
+```
+
+### **Use service account and service account name is `ex280-sa`.**
+```
+oc create sa ex280-sa
+```
+### Give the privileges to service account "ex280-sa". 
+```
+oc adm policy add-scc-to-user anyuid -z ex280-sa
+```
+### Pre-check before adding the Service Account in the cronjob.
+```
+oc get cronjobs.batch test-cron -o yaml | grep service
+```
+### Add the serviceAccount "ex280-sa"
+```
+oc set sa cronjob/test-cron ex280-sa
+```
+
+### Post check 
+```
+oc get cronjobs.batch test-cron -o yaml | grep service
+```
+```
+serviceAccount: ex280-sa
+serviceAccountName: ex280-sa
+```
+
+
+
+
+
