--- a/DO280/17. Liveness-probes.md
+++ b/DO280/17. Liveness-probes.md
@@ -1,4 +1,4 @@
-## Creation of lab.
+## Prepare the lab for this question.
 ```
 oc new-project tuesday
 oc new-app --name liveness-deployment  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
