--- a/DO280/14. NetworkPolicy.md
+++ b/DO280/14. NetworkPolicy.md
@@ -1,4 +1,4 @@
-## Pre-pare lab.
+## Prepare the lab for this question.
 ```
 oc new-project network-policy
 oc new-app --name hello  --image registry.ocp4.example.com:8443/redhattraining/hello-world-nginx:v1.0
