--- a/DO280/10. scale-deployment.md
+++ b/DO280/10. scale-deployment.md
@@ -1,4 +1,4 @@
-## Create the lab
+## Prepare the lab for this question.
 ```
 oc login -u harry -p review
 oc new-project tiger
@@ -10,7 +10,7 @@ oc new-app --name hello --image registry.ocp4.example.com:8443/redhattraining/he
 ### Solution:
 ### Go to the project, first.
 ```
-oc project tiger`
+oc project tiger
 ```
 ### Let's check all the resources in this project `tiger`. You must see one deployment.
 ```
@@ -19,3 +19,4 @@ oc get all
 
 ```
 oc scale deployment/deployment_name --replicas=5
+```
