Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -1,65 +1,33 @@
 ## Prepare the lab. 
 ```
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: todo-http
-  labels:
-    app: todo-http
-    name: todo-http
-  namespace: network-ingress
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: todo-http
-      name: todo-http
-  template:
-    metadata:
-      labels:
-        app: todo-http
-        name: todo-http
-    spec:
-      containers:
-        image: registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
-        name: todo-http
-        ports:
-        - containerPort: 8080
-          name: todo-http
----
-apiVersion: v1
-kind: Service
-metadata:
-  labels:
-    app: todo-http
-    name: todo-http
-  name: todo-http
-spec:
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 8080
-  selector:
-    name: todo-http
+oc new-project quart
+oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
+oc expose service todo-http --hostname  anishrana2001.apps.example.com
 ```
 
 
 # Protect External Traffic with TLS
 ### Create secure Route  with below information
-- Create a secure route in quart project.
-- Expose application https://something.example.com
+- Create a secure route in `quart` project.
+- Expose application https://anishrana2001.apps.example.com
 - Generate self sign certificate using given  subject	
-- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://something.example.com"
-
+- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
 - The application should produce the output
-
+---
+### Solution:
+### Go to the give project `quart`
 ```
 oc project quart
 ```
 
 ```
 oc get all
+```
+
+### Check the website.
+```
+curl anishrana2001.apps.example.com
 ```
 
 
@@ -73,14 +41,14 @@ openssl genrsa -out /tmp/myserver.key 2048
 
 ### 2. Create a Certificate Signing Request (CSR): 
 ```
-openssl req -newkey -nodes -keyout /tmp/mailserver.key  -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://something.example.com"  -out myserver.csr
+openssl req -newkey -nodes -keyout /tmp/mailserver.key  -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"  -out myserver.csr
 ```
                                                                        
 - openssl req: This command creates a CSR.
 - -new: Indicates that you're creating a new CSR.
 - -key server.key: Specifies the private key file to use.
 - -out server.csr: Specifies the output file name for the CSR.
-- S ubject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://something.example.com"
+- S ubject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"
 - C: Country Name                       ==> US
 - ST: State or Province Name            ==> North Carolina
 - L: Locality Name (City)               ==> Raleigh
@@ -93,7 +61,7 @@ openssl req -newkey -nodes -keyout /tmp/mailserver.key  -subj "/C=US/ST=North Ca
 openssl req -new -x509 -days 365 -in myserver.csr -signkey myserver.key -out /tmp/myserver.crt
 
 OR
-openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://something.example.com" -out /tmp/myserver.crt
+openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com" -out /tmp/myserver.crt
 ```
 
 - openssl x509: This command generates the certificate.
@@ -110,6 +78,6 @@ openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Ca
 oc delete route/myapp-route
 ```
 ```
-oc create route edge myapp-route --service=myapp-service  --hostname=something.example.com  --key=/tmp/myserver.key --cert=/tmp/myserver.crt
+oc create route edge myapp-route --service=myapp-service  --hostname=anishrana2001.apps.example.com  --key=/tmp/myserver.key --cert=/tmp/myserver.crt
 ```
 
