Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -9,9 +9,9 @@ oc expose service todo-http --hostname  anishrana2001.apps.example.com
 # Protect External Traffic with TLS
 ### Create secure Route  with below information
 - Create a secure route in `quart` project.
-- Expose application https://anishrana2001.apps.example.com
+- Expose application https://anishrana2001.apps.ocp4.example.com
 - Generate self sign certificate using given  subject	
-- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"
+- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
 - The application should produce the output
 ---
@@ -27,33 +27,41 @@ oc get all
 
 ### Check the website.
 ```
-curl anishrana2001.apps.example.com
+curl anishrana2001.apps.ocp4.example.com
 ```
-
+## Check route
+```
+oc get route
+```
+### Delete this route, so that we will create a new one.
+```
+oc delete routes.route.openshift.io todo-http
+```
 
 ### 1. Generate a Private Key:
 ```
-openssl genrsa -out /tmp/myserver.key 2048
+openssl genrsa -out /tmp/myserver.key 4096
 ```
 - openssl genrsa: This command generates an RSA private key.
 - -out server.key: Specifies the output file name for the key.
-- 2048: Sets the key size to 2048 bits (a common and secure size)
+- 4096: Sets the key size to 4096 bits (a common and secure size)
 
 ### 2. Create a Certificate Signing Request (CSR): 
 ```
-openssl req -newkey -nodes -keyout /tmp/mailserver.key  -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"  -out myserver.csr
+openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
+
 ```
                                                                        
 - openssl req: This command creates a CSR.
 - -new: Indicates that you're creating a new CSR.
 - -key server.key: Specifies the private key file to use.
 - -out server.csr: Specifies the output file name for the CSR.
-- S ubject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com"
+- S ubject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com"
 - C: Country Name                       ==> US
 - ST: State or Province Name            ==> North Carolina
 - L: Locality Name (City)               ==> Raleigh
 - O: Organization Name                  ==> Red Hat
-- CN: Common Name (FQDN of your server) ==> https://something.example.com 	
+- CN: Common Name (FQDN of your server) ==> https://anishrana2001.apps.ocp4.example.com	
 
 ### 3. Generate the Self-Signed Certificate:
 
@@ -61,7 +69,7 @@ openssl req -newkey -nodes -keyout /tmp/mailserver.key  -subj "/C=US/ST=North Ca
 openssl req -new -x509 -days 365 -in myserver.csr -signkey myserver.key -out /tmp/myserver.crt
 
 OR
-openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.example.com" -out /tmp/myserver.crt
+openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com" -out /tmp/myserver.crt
 ```
 
 - openssl x509: This command generates the certificate.
@@ -78,6 +86,6 @@ openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Ca
 oc delete route/myapp-route
 ```
 ```
-oc create route edge myapp-route --service=myapp-service  --hostname=anishrana2001.apps.example.com  --key=/tmp/myserver.key --cert=/tmp/myserver.crt
+oc create route edge myapp-route --service=myapp-service  --hostname=anishrana2001.apps.ocp4.example.com  --key=/tmp/myserver.key --cert=/tmp/myserver.crt
 ```
 
