--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -46,46 +46,45 @@ openssl genrsa -out /tmp/myserver.key 4096
 - -out server.key: Specifies the output file name for the key.
 - 4096: Sets the key size to 4096 bits (a common and secure size)
 
-### 2. Create a Certificate Signing Request (CSR): 
-```
-openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
+### 2. Generate the Self-Signed Certificate:
 
+```                                                       ```
+openssl req -new -x509 -key server.key -out server.crt -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 ```
-                                                                       
-- openssl req: This command creates a CSR.
-- -new: Indicates that you're creating a new CSR.
+
+- openssl x509: This command generates the certificate.
+- -req: Indicates that you're using a CSR.
+- -days 365: Specifies the validity period of the certificate in days (365 in this example). 
 - -key server.key: Specifies the private key file to use.
-- -out server.csr: Specifies the output file name for the CSR.
-- S ubject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com"
+- -out server.crt: Specifies the output file name for the self-signed certificate. 
+- Subject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=https://anishrana2001.apps.ocp4.example.com"
 - C: Country Name                       ==> US
 - ST: State or Province Name            ==> North Carolina
 - L: Locality Name (City)               ==> Raleigh
 - O: Organization Name                  ==> Red Hat
 - CN: Common Name (FQDN of your server) ==> https://anishrana2001.apps.ocp4.example.com	
 
-### 3. Generate the Self-Signed Certificate:
-
-```
-openssl req -new -x509 -days 365 -in myserver.csr -signkey myserver.key -out /tmp/myserver.crt
-
-OR
-openssl req -new -x509 -days 365 -key /tmp/myserver.key -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com" -out /tmp/myserver.crt
-```
-
-- openssl x509: This command generates the certificate.
-- -req: Indicates that you're using a CSR.
-- -days 365: Specifies the validity period of the certificate in days (365 in this example). 
-- -in server.csr: Specifies the CSR file.
-- -signkey server.key: Specifies the private key file to sign the certificate.
-- -out server.crt: Specifies the output file name for the self-signed certificate. 
-
-
 
 ### Now, we have to delete the existing route and create a same route with CRT and KEY.
+
+```
+oc get all
+```
 ```
 oc delete route/myapp-route
 ```
 ```
-oc create route edge myapp-route --service=myapp-service  --hostname=anishrana2001.apps.ocp4.example.com  --key=/tmp/myserver.key --cert=/tmp/myserver.crt
+oc create route edge --service todo-http --key server.key --cert server.crt --hostname anishrana2001.apps.ocp4.example.com
+
 ```
+
+### Post check 
+```
+oc get route
+```
+
+```
+curl https://anishrana2001.apps.ocp4.example.com
+```
+
 
