--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -2,7 +2,7 @@
 ```
 oc new-project quart
 oc new-app --name todo-http --image registry.ocp4.example.com:8443/redhattraining/todo-angular:v1.1
-oc expose service todo-http --hostname  anishrana2001.apps.example.com
+oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 ```
 
 
