Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -27,7 +27,7 @@ oc get all
 
 ### Check the website.
 ```
-curl anishrana2001.apps.ocp4.example.com
+curl server1.apps.ocp4.example.com
 ```
 ## Check route
 ```
