Update 02. Cluster and roles.md

--- a/DO280/02. Cluster and roles.md
+++ b/DO280/02. Cluster and roles.md
@@ -3,7 +3,7 @@
 - Create 3 projects, `front-end`, `back-end`, and `app-db`
 - `harry` user should have cluster administrator rights.
 - `leader` user should be able create project but not administrator tasks or no other user should able to create project.
-- `developer` user can only `view` the resources of `front-end` and `back-end` projects.
+- `raja` user can only `view` the resources of `front-end` and `back-end` projects.
 - `qa-engineer` user should have `admin` access to  `front-end` project.
 - `kubaadmin` is  not present  (make sure your cluster-admin user is working fine before delete kubeadmin, otherwise ocp-cluster not recoverable)
 ---
@@ -35,9 +35,9 @@ oc adm policy remove-cluster-role-from-group  self-provisioner system:authentica
 ```
 oc adm policy add-cluster-role-to-user self-provisioner leader
 ```
-### `developer` user can only `view` the resources of `front-end` and `back-end` projects.
+### `raja` user can only `view` the resources of `front-end` and `back-end` projects.
 ```
-oc adm policy add-cluster-role-to-user view developer -n front-end
+oc adm policy add-cluster-role-to-user view raja -n front-end
 oc adm policy add-cluster-role-to-user view qa-engineer -n back-end
 ```
 ### `qa-engineer` user should have `admin` access to  `front-end` project.
@@ -60,7 +60,7 @@ oc login -u leader -p review
 ```
 
 ```
-oc login -u developer -p review
+oc login -u raja -p review
 ```
 
 ```
