Update 03. Project, Groups and Roles.md

--- a/DO280/03. Project, Groups and Roles.md
+++ b/DO280/03. Project, Groups and Roles.md
@@ -3,7 +3,7 @@
 
 - The `harry` user will create 3 groups, `leaders`, `developers` and `qa`. 
 - Add `leader` user in `leaders` group. 
-- Add `developer` user in `developers` group. 
+- Add `raja` user in `developers` group. 
 - Assign the `qa-engineer` user to the `qa` group.
 - Give `edit` permission to `leaders` group members to `back-end` and `app-db` projects.
 - Give `view` permission to `qa` group members to `front-end` project.
@@ -40,10 +40,10 @@ oc adm groups add-users qa  qa-engineer
 ```
 oc adm groups add-users leaders  leader
 ```
-### Assign the `developer` user to the `developers` group. 
+### Assign the `raja` user to the `developers` group. 
 
 ```
-oc adm groups add-users developers  developer
+oc adm groups add-users developers  raja
 ```
 
 ### leader group members are able to `edit` the group `back-end` and `app-db`
