Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -11,7 +11,7 @@ oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 - Create a secure route in `quart` project.
 - Expose application https://anishrana2001.apps.ocp4.example.com
 - Generate self sign certificate using given  subject	
-- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=https://anishrana2001.apps.ocp4.example.com"
+- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=anishrana2001.apps.ocp4.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
 - The application should produce the output
 ---
@@ -57,12 +57,12 @@ openssl req -new -x509 -key server.key -out server.crt -subj "/C=US/ST=North Car
 - -days 365: Specifies the validity period of the certificate in days (365 in this example). 
 - -key server.key: Specifies the private key file to use.
 - -out server.crt: Specifies the output file name for the self-signed certificate. 
-- Subject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=https://anishrana2001.apps.ocp4.example.com"
+- Subject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 - C: Country Name                       ==> US
 - ST: State or Province Name            ==> North Carolina
 - L: Locality Name (City)               ==> Raleigh
 - O: Organization Name                  ==> Red Hat
-- CN: Common Name (FQDN of your server) ==> https://anishrana2001.apps.ocp4.example.com	
+- CN: Common Name (FQDN of your server) ==> anishrana2001.apps.ocp4.example.com	
 
 
 ### Now, we have to delete the existing route and create a same route with CRT and KEY.
