--- a/DO280/12. Helm.md
+++ b/DO280/12. Helm.md
@@ -29,7 +29,7 @@ do280-repo/etherpad      0.0.6          latest       ...
 ### The `etherpad` chart has the 0.0.7 and 0.0.6 versions. This chart is a copy of a chart from the https://github.com/redhat-cop/helm-charts repository.
 ## Now, we can install the application "etherpad" with version. Please note that, if in the exam it is not asked for any version then you can use the latest one. 
 ```
-helm install example-app do280-repo/etherpad --version 0.0.7
+helm install etherpad do280-repo/etherpad --version 0.0.7
 ```
 
 
