Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -11,7 +11,7 @@ oc expose service todo-http --hostname  server1.apps.ocp4.example.com
 - Create a secure route in `quart` project.
 - Expose application https://anishrana2001.apps.ocp4.example.com
 - Generate self sign certificate using given  subject	
-- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=anishrana2001.apps.ocp4.example.com"
+- "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
 - Note: Service already  created  in any given project you just have to expose  service  with https
 - The application should produce the output
 ---
