Update 04. Protect External Traffic with TLS.md

--- a/DO280/04. Protect External Traffic with TLS.md
+++ b/DO280/04. Protect External Traffic with TLS.md
@@ -46,15 +46,14 @@ openssl genrsa -out /tmp/myserver.key 4096
 - -out server.key: Specifies the output file name for the key.
 - 4096: Sets the key size to 4096 bits (a common and secure size)
 
-### 2. Generate the Self-Signed Certificate:
+### 2. Generate the CSR file:
 
 ```
-openssl req -new -x509 -key server.key -out server.crt -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
+openssl req -new -key server.key -out server.csr -subj "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/\ CN=anishrana2001.apps.ocp4.example.com"
 ```
 
-- openssl x509: This command generates the certificate.
+
 - -req: Indicates that you're using a CSR.
-- -days 365: Specifies the validity period of the certificate in days (365 in this example). 
 - -key server.key: Specifies the private key file to use.
 - -out server.crt: Specifies the output file name for the self-signed certificate. 
 - Subject is given in the question.    ==> "/C=US/ST=North Carolina/L=Raleigh/O=Red Hat/CN=anishrana2001.apps.ocp4.example.com"
@@ -64,7 +63,17 @@ openssl req -new -x509 -key server.key -out server.crt -subj "/C=US/ST=North Car
 - O: Organization Name                  ==> Red Hat
 - CN: Common Name (FQDN of your server) ==> anishrana2001.apps.ocp4.example.com	
 
+### 3. Generate the Certificate.
+```
+openssl x509 -req -day 365 -in server.csr -signkey server.key -out server.crt
+```
+- openssl x509: This command generates the certificate.
+- -days 365: Specifies the validity period of the certificate in days (365 in this example).
+- -in Your CSR file.
+- -signkey Signature key
+- -out your Certificate file.
 
+  
 ### Now, we have to delete the existing route and create a same route with CRT and KEY.
 
 ```
@@ -82,9 +91,17 @@ oc create route edge --service todo-http --key server.key --cert server.crt --ho
 ```
 oc get route
 ```
-
+### Open the browser
 ```
-curl https://anishrana2001.apps.ocp4.example.com
+https://anishrana2001.apps.ocp4.example.com
+```
+
+### How to delete the lab.
+```
+oc delete route todo-http
+oc delete service todo-http
+oc delete deployment todo-http
+rm -rf server.key server.csr server.crt
 ```
 
 
